<resources>
    <string name="app_name">Zera</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="logout">Are you sure to logout from this app ?</string>
    <string name="exit_screen">Sure if you wan\'t to exits this app</string>
    <string name="no_internet">No internet connection \n Go to setting and connect to network.</string>
    <string name="error_msg">Please try again something went to wrong</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="language_english">en</string>
    <string name="language_hindi">ar</string>
    <string name="validation_name">Please enter name.</string>
    <string name="validation_firstname">Please enter first name.</string>
    <string name="validation_lastname">Please enter last name.</string>
    <string name="validation_mobile_length">Please enter valid mobile number</string>
    <string name="validation_email">Please enter valid email.</string>
    <string name="validation_password">Please enter password.</string>
    <string name="validation_valid_password">Password must be of minimum six character.</string>
    <string name="validation_termsCondtions">Please agree to the terms and conditions</string>
    <string name="validation_city">Please enter city.</string>
    <string name="validation_dateOfBirth">Please select date of birth.</string>
    <string name="validation_state">Please enter State.</string>
    <string name="validation_oldpassword">Please enter old password.</string>
    <string name="validation_newpassword">Please enter new password.</string>
    <string name="validation_cpassword">Please enter confirm password.</string>
    <string name="validation_valid_cpassword">New password and confirm password must be same.</string>
    <string name="validation_mobile">Please enter mobile no.</string>
    <string name="validation_money">Please enter valid amount</string>
    <string name="validation_termPeriod">Please select term period</string>
    <string name="validation_valid_mobile">Please enter valid mobile no.</string>
    <string name="validation_comment">Please enter comment</string>
    <string name="validation_address">Please enter address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="validation_money_withdraw">Withdrawal amount exceeds the available amount</string>
    <string name="validation_money_redeposit">Redeposit amount exceeds the available amount</string>
    <string name="validation_zero_amount">Withdrawal amount cannot be zero</string>
    <string name="minimumAmount500">Deposit amount cannot be less than 500</string>
    <string name="validation_zeroDeposit_amount">Deposit amount cannot be zero</string>
    <string name="changePassword">Change Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="save">Save</string>
    <string name="passwordSuccess">Password changed successfully</string>
    <string name="renewAccount">Renew Account</string>
    <string name="deleteUser">Delete Confirmation</string>
    <string name="confirmations">Confirmation</string>
    <string name="userDeleteConfirmation">Do you really want to delete this user?</string>
    <string name="addSignHeader">Please sign below</string>
    <string name="pdfTitle">ZERA</string>
    <string name="companyRepresentative">Luis A. Romero, Representative, Zera Financial</string>
    <string name="maturityDate">Maturity Date -</string>
    <string name="termLength">Term Length -</string>
    <string name="interestRate">Interest Rate -</string>
    <string name="date">Date -</string>
    <string name="minimumTerm">MINIMUM TERM</string>
    <string name="sixmonth">6 Months</string>
    <string name="oneYear">1 Year</string>
    <string name="twoyear">2 Years</string>
    <string name="depositAmount">DEPOSIT AMOUNTS</string>
    <string name="amt500">$500-$15,000</string>
    <string name="amt15000">$15,001-$100,000</string>
    <string name="amount1L">$100,001+</string>
    <string name="monthlyInterestRate">MONTHLY INTEREST RATE</string>
    <string name="rate5">5%/Month</string>
    <string name="currentInterest">Current Interest Rates For Any New Accounts</string>
    <string name="renewalPolicy"><b>RENEWAL POLICY –</b> The account will automatically renew at maturity unless you notify us
within the 3-day grace period after the maturity date that you do not want the account to
automatically renew. If you choose to let the account automatically renew, the term will renew as
the same term as before. If you do not notify us, the renewal term will be the same as the
original term, beginning on the maturity date (unless we notify you, in writing, before a maturity
date, of a different term for renewal).</string>
    <string name="interest"><b>INTEREST –</b> The interest rate on your account is a fixed rate. The initial interest rate is stated in
the welcome letter sent to you at the e-mail address you provided at the account opening. </string>
    <string name="maturity_Date"><b>MATURITY DATE –</b>  Confirmation of your maturity date, based on the term you selected at
account opening and the date we receive the deposit to fund the account, will be sent to you in
a welcome letter at the e-mail address you provided us when you opened the account.</string>
    <string name="rateInfo"><b>RATE INFORMATION – </b> We guarantee the disclosed interest rate for 3 days from the date of
the account opening. You must fund the account within this time period. If you do not fund the
account within 3 days of account opening, the interest rate will be the prevailing interest rate at
the time we receive the deposit. In any case, the account must be funded within 3 days of
opening or it will be closed. \n\nConfirmation of your interest rate will be sent to you in a welcome letter at the e-mail address
you provided us when you opened the account. The interest rate will be paid out monthly and or
reinvested in the account. Interest begins to accrue on the business day we receive your
deposit of any non-cash item (for example, a check) to fund the account.
\n\nInterest will be compounded and credited monthly/annually, unless you have selected otherwise
in which case interest will be compounded and credited at maturity. If you choose, you may
have interest paid to you each month or reinvested into account.
\n\nThe interest rate stated in your welcome letter assumes that interest remains on deposit until
maturity. A withdrawal of interest will reduce earnings.</string>
    <string name="minimumBalance"><b>MINIMUM BALANCE REQUIREMENT –</b>  You must make a minimum deposit of $500 to open
the account. You must maintain this minimum balance on a daily basis to earn the interest rate
disclosed.</string>
    <string name="noOfEndorsment"><b>NUMBER OF ENDORSEMENTS –</b>  Only one endorsement by any named owner is required to
withdraw or renegotiate the terms of the account. </string>
    <string name="withdrawPenality"><b>WITHDRAWALS OF INTEREST –</b> Withdrawals of accrued interest during a term are permitted
without penalty.</string>
    <string name="earlyWithdrawal"><b>EARLY WITHDRAWAL PENALTY- </b>If we consent to a request for a withdrawal that is
otherwise not permitted, you may have to pay a penalty. The penalty amount will be determined
as follows:
\n\n15% penalty of total account funds </string>
    <string name="transctionalLimit"><b>TRANSACTION LIMITATIONS</b> – You may make additional deposits to the accounts principal
during a term (if deposit is after withdrawal date and or after 72 grace period, interest will not
start occurring until next withdrawal date). You cannot withdraw principal from the account
without our consent except on or after maturity. (For accounts that automatically renew, there is
a grace period after each renewal date during which withdrawals are permitted without penalty.)
In certain circumstances, such as the death or incompetence of an account owner, the law
permits, and in some cases requires, the waiver of the early withdrawal penalty. Other
exceptions may also apply, for example, if this is part of an IRA or other tax-deferred savings
plan.
\n\nInterest earned during one term that is not withdrawn during or immediately after the term is
added to principal for the renewal term. The rate for each renewal term will be determined by us
on or just before the renewal date. You may call us on or shortly before the maturity date and we
can tell you what the interest rate will be for the next renewal term.</string>
    <string name="balancecompution"><b>BALANCE COMPUTATION METHOD –</b> We use the daily balance method to calculate the
interest on this account. This method applies a daily periodic rate to the principal in the account
each day.</string>
    <string name="setOff"><b>SETOFF –</b> You each agree that we may (when permitted by law) set off funds in this account
against any due and payable debt owed to us now or in the future, by any of you having the
right of withdrawal, to the extent of such person’s or legal entity’s right to withdraw. If the debt
arises from a note, “any due and payable debt” includes the total amount of which we are
entitled to demand payment under the terms of the note at the time we set off, including any
balance for which we properly accelerate under the note. This right to set-off does not apply to
the account if: (a) it is an Individual Retirement Account or other tax-deferred retirement
account, or (b) the debt is created by a consumer credit transaction under a credit card</string>
    <string name="oldpassword">Old password</string>
    <string name="termPeriod">Term Period</string>
    <string name="years">Year(s)</string>
    <string name="months">Months(s)</string>
    <string name="fixedInterestRate">Fixed Interest Rate</string>
    <string name="howmuchIcanMake">How Much Can I Make?</string>
    <string name="enterAmount">Enter amount</string>
    <string name="principalDepositAmount">Principal Deposit Amount</string>
    <string name="FivepercentPerMonth">5% Every Month</string>
    <string name="calculate">Calculate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>