<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activitys.activity.HowMuchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/backHMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_horizontal"
            android:text="@string/howmuchIcanMake"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/intro_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/principalDepositAmount"
                android:textColor="@color/dark_blue"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pDepositAmount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/info_edit_text_black"
                android:hint="@string/enterAmount"
                android:inputType="number"
                android:paddingLeft="15sp"
                android:singleLine="true"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:maxLength="6"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/termPeriod"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/info_edit_text_black">

                    <Spinner
                        android:id="@+id/spin_count"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_margin="1dp"
                        android:textAlignment="center"
                        />


                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:orientation="horizontal"
                        android:id="@+id/rg_termPeriod">

                        <RadioButton
                            android:id="@+id/rb_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/yellow"
                            android:text="@string/years"
                            android:textColor="@color/dark_blue"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/rb_month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/yellow"
                            android:text="@string/months"
                            android:textColor="@color/dark_blue"
                            android:textStyle="bold" />
                    </RadioGroup>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/fixedInterestRate"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/info_edit_text_black"
                    android:gravity="center_vertical"
                    android:hint="@string/FivepercentPerMonth"
                    android:inputType="number"
                    android:paddingLeft="18sp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_calculate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="70dp"
                    android:background="@drawable/signup_background"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/calculate"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>