<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@color/dark_blue"
    tools:context=".activitys.activity.ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginLeft="10dp"
            android:id="@+id/backChangePass"
            android:layout_centerVertical="true"
            app:tint="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePassword"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:background="@drawable/intro_background">
        <EditText

            android:layout_width="match_parent"
            android:id="@+id/currentPass"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/info_edit_text_black"
            android:gravity="center_vertical"
            android:hint="@string/oldpassword"
            android:paddingLeft="17dp"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/text_gray"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:id="@+id/newPass"
            android:background="@drawable/info_edit_text_black"
            android:gravity="center_vertical"
            android:hint="@string/newPassword"
            android:paddingLeft="17dp"
            android:singleLine="true"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/text_gray"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/info_edit_text_black"
            android:gravity="center_vertical"
            android:id="@+id/confirmPass"
            android:hint="@string/confirmPassword"
            android:paddingLeft="17dp"
            android:inputType="textPassword"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:textColor="@color/text_gray"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/save"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:id="@+id/changePassBtn"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:textSize="17sp"/>

    </LinearLayout>
</LinearLayout>