<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_corner_white_10"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <RelativeLayout
                android:id="@+id/rl_ok"
                style="@style/logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
                android:layout_weight="50">

                <TextView
                    style="@style/logout_button"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_cancel"
                style="@style/logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_weight="50"
                android:backgroundTint="@color/text_gray">


                <TextView
                    style="@style/logout_button"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/text_gray"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>